--- a/IPE/index.html
+++ b/IPE/index.html
@@ -82,7 +82,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <button type="submit" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>Pilih 01</button>
+                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>Pilih 01</button>
                         </div>
                     </form>
                 </div>
@@ -118,7 +118,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <button type="submit" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>Pilih 02</button>
+                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>Pilih 02</button>
                         </div>
                     </form>
                 </div>
@@ -154,7 +154,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <button type="submit" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>Pilih 03</button>
+                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>Pilih 03</button>
                         </div>
                     </form>
                 </div>
