--- a/IPE/index.html
+++ b/IPE/index.html
@@ -26,6 +26,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1580562505317506"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -183,6 +186,10 @@
 
         <div class="mt-5 mb-5 border-top"></div>
 
+        <div id="SC_TBlock_883308"></div>
+
+        <div class="mt-5 mb-5 border-top"></div>
+
         <section id="alasan" class="row text-center mb-5">
             <h1 class="mb-3">Alasan Pemilih</h1>
             <div class="col-md-4">
@@ -216,6 +223,13 @@
 </html>
 
 <script src="./database.js"></script>
+<script type="text/javascript">
+    (sc_adv_out = window.sc_adv_out || []).push({
+        id: 883308,
+        domain: "n.ads1-adnow.com",
+    });
+    </script>
+    <script type="text/javascript" src="//st-n.ads1-adnow.com/js/a.js" async></script>
 <script>
     // Theme
     let tema = document.getElementById("tema").classList
