--- a/IPE/index.html
+++ b/IPE/index.html
@@ -185,7 +185,7 @@
 
         <section id="perolehan" class="w-100 text-center mb-5">
             <h1 class="mb-3">Perolehan Pilihan</h1>
-            <div style="width: 90%;" class="w-100 ms-auto me-auto">
+            <div style="width: 90%;" class="ms-auto me-auto">
                 <canvas id="grafik"></canvas>
             </div>
         </section>
