--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1580562505317506"
      crossorigin="anonymous"></script>
+  <script async="async" data-cfasync="false" src="//pl22486326.profitablegatecpm.com/447c775022427997699b9223051cb580/invoke.js"></script>
 </head>
 
 <body>
@@ -33,6 +34,7 @@
       </div>
     </div>
   </section>
+  <div id="container-447c775022427997699b9223051cb580"></div>
 </body>
 
 <footer>
