--- a/IPE/index.html
+++ b/IPE/index.html
@@ -29,6 +29,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1580562505317506"
         crossorigin="anonymous"></script>
+    <script async="async" data-cfasync="false" src="//pl22486326.profitablegatecpm.com/447c775022427997699b9223051cb580/invoke.js"></script>
 </head>
 
 <body>
@@ -189,6 +190,12 @@
                 <canvas id="grafik"></canvas>
             </div>
         </section>
+
+        <div class="mt-5 mb-5 border-top"></div>
+
+        <div class="mt-5 mb-5 border-top"></div>
+
+        <div id="container-447c775022427997699b9223051cb580"></div>
 
         <div class="mt-5 mb-5 border-top"></div>
 
