--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
+        <div class="ads mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
 
         <ul class="list-group" id="chat">
             <li class="list-group-item" style="display: none;" id="chat-item"></li>
