--- a/IPE/index.html
+++ b/IPE/index.html
@@ -493,6 +493,24 @@
 
     dataPemilihan()
 
+    // Ads
+    let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
+    let adsPic = document.querySelectorAll(".container-447c775022427997699b9223051cb580__img")
+    let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
+    for (let i = 0; i < adsText.length; i++) {
+        const caption = adsText[i].innerHTML.toLowerCase()
+        const block = ["judi","slot","gacor","bet", "deposit"]
+        const split = caption.split(/\s+/)
+        block.forEach((larang) => {
+            const index = split.indexOf(larang)
+            if (index !== -1) {
+                document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")[0].attributes[3].value = "#"
+                adsLink[i].attributes[3].value = "https://www.bijakmemilih.id/"
+                adsPic[i].style.backgroundImage = "url(https://framerusercontent.com/images/DEiJuuVj5kx31lEhUXzjQlxtRhk.webp?scale-down-to=320)"
+                adsText[i].innerHTML = "Masih bingung sama Pemilu? Yuk kunjungi Bijak Memilih"
+            }
+        } )
+    }
 </script>
 
 <style>
